tests/should-fail/semantics/not-enough-parameters.j
native Foo takes integer x, real bla, string wat, handle asdf, integer y returns nothing


function test takes nothing returns nothing
    call Foo(3, 3.1, "bla")
endfunction

